--- a/cargo2/src/todo.txt
+++ b/cargo2/src/todo.txt
@@ -1,4 +1,14 @@
 1a. Booking
+	-- Create Charges Rule Database
+		-- Active
+		-- Start Date - End Date
+		-- Charge Type
+		-- Origin	- country
+		-- Destination	- country
+		-- SHC
+		-- Service Level
+		-- Amount - Local Currency
+		
 1b. Full AWB
 
 1c. Acceptance
